# cuda-training-series

./: CMakeLists.txt
exercises/hw1/: CMakeLists.txt  hello.cu  vector_add.cu
exercises/hw2/: CMakeLists.txt  matrix_mul_shared.cu  stencil_1d.cu
